--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     environment:
       POSTGRES_DB: inventoryDB
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: Bhaga@0612
+      POSTGRES_PASSWORD: 
     volumes:
       - postgres-data:/var/lib/postgresql/data
     networks:
@@ -26,7 +26,7 @@ services:
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/inventoryDB
       SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: Bhaga@0612
+      SPRING_DATASOURCE_PASSWORD: 
     ports:
       - "8092:8092"
     networks:
